--- a/OctagonPlatform/Views/TerminalContacts/Create.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Create.cshtml
@@ -1,119 +1,8 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.TerminalContactFormViewModel
-
+﻿
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 <h3 class="alert-info">Create Contact</h3>
 
-@using (Html.BeginForm("Create", "TerminalContacts"))
-{
-    <p class="alert alert-danger">
-        All fields are <strong>required.</strong>
-        @ViewBag.Error
-        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
-    </p>
-
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.TerminalId)
-    <div class="form-group">
-        @Html.LabelFor(m => m.Name)
-        @Html.TextBoxFor(m => m.Name, new { @class = "form-control", autofocus = "autofocus", placeholder = "Jhon" })
-        @Html.ValidationMessageFor(m => m.Name)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.LastName)
-        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autofocus = "autofocus", placeholder = "Smith" })
-        @Html.ValidationMessageFor(m => m.LastName)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ContactTypeId)
-        @Html.DropDownListFor(m => m.ContactTypeId, new SelectList(Model.ContactTypes, "Id", "Name"), "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.ContactTypeId)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Address1)
-        @Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "124 SW 105 Ave" })
-        @Html.ValidationMessageFor(m => m.Address1)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Address2)
-        @Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", placeholder = "Apto 203" })
-        @Html.ValidationMessageFor(m => m.Address2)
-    </div>
-    <div class="form-group">
-        <div id="Countries">
-            <label for="Countries">Country</label>
-            <select required id="CountryId" name="CountryId" class="form-control">
-                <option value="231">United States</option>
-                @foreach (var item in Model.Countries)
-                {
-                    <option value="@item.Id">@item.Name</option>
-                }
-            </select>
-            @Html.ValidationMessageFor(m => m.CountryId)
-
-        </div>
-        <div>
-            <div class="loader"></div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div id="States">
-            <label for="States">State</label>
-            <select required id="StatesId" name="StateId" class="form-control">
-                <option value="3930">Florida</option>
-                @foreach (var item in Model.States)
-                {
-                    <option value="@item.Id">@item.Name</option>
-                }
-            </select>
-            @Html.ValidationMessageFor(m => m.StateId)
-
-        </div>
-        <div>
-            <div class="loader"></div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div id="Cities">
-            <label for="Cities">City</label>
-            <select id="CitiesId" name="CityId" class="form-control">
-                <option value="43769">Miami</option>
-                @foreach (var item in Model.Cities)
-                {
-                    <option value="@item.Id">@item.Name</option>
-                }
-            </select>
-            @Html.ValidationMessageFor(m => m.CityId)
-        </div>
-        <div>
-            <div class="loader"></div>
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", placeholder = "test@email.com" })
-        @Html.ValidationMessageFor(m => m.Email)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Phone)
-        @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", autofocus = "autofocus", placeholder = "(786) 555 5555" })
-        @Html.ValidationMessageFor(m => m.Phone)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Zip)
-        @Html.TextBoxFor(m => m.Zip, new { @class = "form-control", autofocus = "autofocus", placeholder = "33181" })
-        @Html.ValidationMessageFor(m => m.Zip)
-    </div>
-    <div class="form-group">
-        <div class="col-lg-10 col-lg-offset-2">
-            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save</button>
-        </div>
-    </div>
-}
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/xpopulate")
-}
+@Html.Partial("")
