--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -1,17 +1,21 @@
-﻿@model OctagonPlatform.Models.Terminal
+﻿@model IEnumerable<OctagonPlatform.Models.TerminalContact>
     
 <div id="getContacts" class="panel-collapse collapse">
     <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
-        @Html.ActionLink(
-                linkText: "Add Contact",
-                actionName: "Create",
-                controllerName: "TerminalContacts",
-                routeValues: new
-                {
-                    terminalId = Model.Id
-                },
-                htmlAttributes: null
-                )
+        @Ajax.ActionLink("ADD", "Create", "TerminalContacts", new { terminalId = ViewData["terminalId"]?.ToString() },
+                   new AjaxOptions
+                   {
+                       UpdateTargetId = "AddContact",
+                       LoadingElementId = "loading3",
+                       InsertionMode = InsertionMode.Replace,
+                       HttpMethod = "Get"
+                   },
+                   htmlAttributes: new
+                   {
+                       @class = "link",
+                       data_toggle = "modal",
+                       data_target = "#AddContact"
+                   })
     </div>
 
     @*
@@ -33,7 +37,7 @@
             </tr>
         </thead>
         <tbody id="listOfTerminalContacts">
-            @foreach (var item in Model.TerminalContacts)
+            @foreach (var item in Model)
     {
         if (!item.Deleted)
         {
@@ -44,40 +48,7 @@
                 <td>@item.Phone</td>
                 <td>@item.Email</td>
                 <td>@item.Address1</td>
-                @*  <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
-                                                                    linkText: "Edit",
-                                                                    actionName: "Edit",
-                                                                    controllerName: "TerminalContacts",
-                                                                    routeValues: new
-                                                                    {
-                                                                        id = item.Id
-                                                                    },
-                                                                    htmlAttributes: null
-                                                                    )</td>
-                    <td>
-                        <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
-                                                                     linkText: "Delete",
-                                                                     actionName: "Delete",
-                                                                     controllerName: "TerminalContacts",
-                                                                     routeValues: new
-                                                                     {
-                                                                         id = item.Id,
-                                                                         terminalId = Model.Id
-                                                                     },
-                                                                     htmlAttributes: null
-                                                                     )
-                    </td>
-                    <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
-                                                                        linkText: "Details",
-                                                                        actionName: "Details",
-                                                                        controllerName: "TerminalContacts",
-                                                                        routeValues: new
-                                                                        {
-                                                                            id = item.Id
-                                                                        },
-                                                                        htmlAttributes: null
-                                                                        )</td>
-                *@
+         
             </tr>
         }
     }
