modificado las notas de las terminales

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -95,7 +95,7 @@
                     <h3 class="texth3" data-toggle="collapse" data-target="#getContacts">
                         <i class="fa fa-book" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getContacts">Contacts</a>
                     </h3>
-                    @Html.Partial("Sections/Contacts", Model.TerminalContacts, new ViewDataDictionary() { { "terminalId", Model.Id } }))
+                    @Html.Partial("Sections/Contacts", Model.TerminalContacts, new ViewDataDictionary() { { "terminalId", Model.Id } })
                 </div>
             </div>
         </div>
