--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -12,7 +12,7 @@
                    },
                    htmlAttributes: new
                    {
-                       @class = "link",
+                       @class = "btn btn-info",
                        data_toggle = "modal",
                        data_target = "#AddContact"
                    })
