--- a/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
@@ -1,24 +1,7 @@
 ﻿@model IEnumerable<OctagonPlatform.Models.InterChange>
 
 <div id="getInterchange" class="panel-collapse collapse">
-    <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#AddInterchange">Add</button>
-    <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
-        @Html.ActionLink(
-                     linkText: "Add Interchange",
-                     actionName: "Create",
-                     controllerName: "InterChange",
-                     routeValues: new
-                     {
-                         terminalId = ViewData["terminalId"]?.ToString()
-                     },
-                        htmlAttributes: null
-                        )
-    </div>
-    @*
-        <p class="alert alert-info">
-            <strong>@ViewBag.Error</strong>
-        </p>
-    *@
+    
     @Ajax.ActionLink("ADD", "Create", "InterChange", new { terminalId = ViewData["terminalId"]?.ToString() },
                    new AjaxOptions
                    {
@@ -29,7 +12,7 @@
                    },
                    htmlAttributes: new
                    {
-                       @class = "link",
+                       @class = "btn btn-info",
                        data_toggle = "modal",
                        data_target = "#AddInterchange"
                    })
