--- a/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
@@ -9,20 +9,17 @@
                     {
                         <tr>
                             <td>
-                                @item.Id
-                            </td>
-                            <td>
-                                <input type="text" id="NotesValues_@item.Id" name="NotesValues" value="@item.Nota">
+                                <input type="hidden" id="NotesValues_@item.Id" name="NotesValues" value="@item.Nota">
                                 @item.Nota
                             </td>
                             <td>
                                 @item.CreatedAt
                             </td>
                             <td>
-                                <button type="button" class="NotesEdit btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#myModalNotesEdit">Edit</button>
+                                <button type="button" class="NotesEdit link" data-toggle="modal" data-id="@item.Id" data-target="#myModalNotesEdit"><i class="fa fa-pencil" style="color: darkblue; font-size: 16px;">Edit</i></button>
                             </td>
                             <td>
-                                <button type="button" class="NotesDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteNoteModal">Delete</button>
+                                <button type="button" class="NotesDelete link" data-toggle="modal" data-id="@item.Id" data-target="#DeleteNoteModal">Delete</button>
                             </td>
                         </tr>
                     }
@@ -104,22 +101,23 @@
             </div>
         </div>
 
-        <div id="DeleteCassetteModal" class="modal">
+        <div id="DeleteNoteModal" class="modal">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Delete Cassette</h4>
+                        <h4 class="modal-title">Delete note</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Are you sure you want to delete this cassette? </p>
+                        <p>Are you sure you want to delete this note? </p>
                     </div>
                     <div class="modal-footer">
-                        @using (Html.BeginForm("CassetteDelete", "Terminals", FormMethod.Post))
+                        @using (Html.BeginForm("DeleteNotes", "Terminals", FormMethod.Post))
                         {
                             @Html.AntiForgeryToken()
                             @Html.Hidden("noteId")
-                            <input type="hidden" id="itemId" name="id" value="" />
+                            <input type="hidden" id="indexTerminalId" name="indexTerminalId" value="@Model.Id" />
+                            
                             <div class="form-group">
                                 <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
                                 <button type="reset" data-dismiss="modal" class="btn btn-default">Cancel</button>
