--- a/OctagonPlatform/Views/Terminals/Sections/Surcharge.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Surcharge.cshtml
@@ -11,7 +11,7 @@
                    },
                    htmlAttributes: new
                    {
-                       @class = "link",
+                       @class = "btn btn-info",
                        data_toggle = "modal",
                        data_target = "#AddSurcharge"
                    })
