--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -26,9 +26,10 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="texth3" data-toggle="collapse" data-target="#getConfigurations">
-                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getConfigurations">Configuration</a>
+                        <i class="fa fa-sun-o" style="font-size:25px;color:#4776a1"></i>
+                        <a data-toggle="collapse" href="#getConfigurations">Configuration</a>
                     </h3>
-                    @Html.Partial("Sections/ConfigNotification", Model)
+                    @Html.Partial("Sections/ConfigNotification", Model.TerminalAlertConfigs)
                 </div>
             </div>
         </div>
