--- a/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/ConfigNotification.cshtml
@@ -1,14 +1,14 @@
-﻿@model OctagonPlatform.Models.Terminal
+﻿@model OctagonPlatform.Models.TerminalAlertConfig
 
 <div id="getConfigurations" class="panel-collapse collapse">
     <table class="table table-striped table-hover ">
         <tr class="info">
             <th data-toggle="collapse" data-target="#collapse1">
-                <a data-toggle="collapse" href="#collapse1">Inactive Period: @Model.TerminalAlertConfigs.IgnoreHoursInactive</a>
+                <a data-toggle="collapse" href="#collapse1">Inactive Period: @Model.IgnoreHoursInactive</a>
                 <div id="collapse1" class="collapse">
                     <table>
                         <tbody>
-                            @{
+                            @*@{
                                 foreach (var item in Model.WorkingHours)
                                 {
                             <tr>
@@ -24,7 +24,7 @@
                                     <button type="button" class="WorkingHoursDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeleteWorkingHours">Delete</button>
                                 </td>
                             </tr>
-                                }
+                                }*@
                             <tr>
                                 <td></td>
                                 <td>
@@ -43,36 +43,37 @@
         <tr class="info">
 
             <th>Low Cash 1:</th>
-            <th>@Model.TerminalAlertConfigs.LowCach1</th>
+            <th>@Model.LowCach1</th>
         </tr>
         <tr class="info">
 
             <th>Low Cash 2:</th>
-            <th>@Model.TerminalAlertConfigs.LowCash2</th>
+            <th>@Model.LowCash2</th>
         </tr>
         <tr class="info">
 
             <th>Low Cash 3:</th>
-            <th>@Model.TerminalAlertConfigs.LowCash3</th>
+            <th>@Model.LowCash3</th>
         </tr>
         <tbody></tbody>
     </table>
     Ignored Alerts <br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreBillDispenserNeedAttention, new { @disabled = "disabled" }) Bill dispenser needs attention or out of service<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreCardReaderNeedAttention, new { @disabled = "disabled" }) Card reader needs attention or out of service<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreCassetteNotes, new { @disabled = "disabled" }) Cassette notes are out<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreChestDoorOpen, new { @disabled = "disabled" }) Chest door is open<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreCommNeedAttention, new { @disabled = "disabled" }) Comm system needs attention or out of service<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreJournalNeedAttention, new { @disabled = "disabled" }) Journal printer needs attention or out of service<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreJournalPaper, new { @disabled = "disabled" }) Journal printer paper is low/out<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreJournalRibbon, new { @disabled = "disabled" }) Journal printer ribbon is low/out<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreReceiptNeedAttention, new { @disabled = "disabled" }) Receipt printer need attention or out of service<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreReceiptPaper, new { @disabled = "disabled" }) Receipt printer paper is low/out<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreReceiptRibbon, new { @disabled = "disabled" }) Receipt printer ribbon is low/out<br />
-    @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreTopDoorOpen, new { @disabled = "disabled" }) Top door is Open<br />
+    @Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention, new { @disabled = "disabled" }) Bill dispenser needs attention or out of service<br />
+    @Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention, new { @disabled = "disabled" }) Card reader needs attention or out of service<br />
+    @Html.CheckBoxFor(m => m.IgnoreCassetteNotes, new { @disabled = "disabled" }) Cassette notes are out<br />
+    @Html.CheckBoxFor(m => m.IgnoreChestDoorOpen, new { @disabled = "disabled" }) Chest door is open<br />
+    @Html.CheckBoxFor(m => m.IgnoreCommNeedAttention, new { @disabled = "disabled" }) Comm system needs attention or out of service<br />
+    @Html.CheckBoxFor(m => m.IgnoreJournalNeedAttention, new { @disabled = "disabled" }) Journal printer needs attention or out of service<br />
+    @Html.CheckBoxFor(m => m.IgnoreJournalPaper, new { @disabled = "disabled" }) Journal printer paper is low/out<br />
+    @Html.CheckBoxFor(m => m.IgnoreJournalRibbon, new { @disabled = "disabled" }) Journal printer ribbon is low/out<br />
+    @Html.CheckBoxFor(m => m.IgnoreReceiptNeedAttention, new { @disabled = "disabled" }) Receipt printer need attention or out of service<br />
+    @Html.CheckBoxFor(m => m.IgnoreReceiptPaper, new { @disabled = "disabled" }) Receipt printer paper is low/out<br />
+    @Html.CheckBoxFor(m => m.IgnoreReceiptRibbon, new { @disabled = "disabled" }) Receipt printer ribbon is low/out<br />
+    @Html.CheckBoxFor(m => m.IgnoreTopDoorOpen, new { @disabled = "disabled" }) Top door is Open<br />
 
     <button type="button" class="btn btn-info btn-microsoft" data-toggle="modal" data-target="#myModal">Edit configuration</button>
-
+    
+    @*========= Modal =========*@
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -87,46 +88,47 @@
             {
                     @Model
                     @Html.AntiForgeryToken()
-                    @Html.HiddenFor(m => m.TerminalId)
+                    @Html.Hidden("terminalId",Model.Id)
+
                     <p class="alert alert-danger">
                         All fields are <strong>required.</strong>
                         @ViewBag.Error
                         @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
                     </p>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.TerminalAlertConfigs.IgnoreHoursInactive)
-                        @Html.TextBoxFor(m => m.TerminalAlertConfigs.IgnoreHoursInactive, new { @class = "form-control", autofocus = "autofocus", placeholder = "1 Jan 2000", @type = "date" })
-                        @Html.ValidationMessageFor(m => m.TerminalAlertConfigs.IgnoreHoursInactive)
+                        @Html.LabelFor(m => m.IgnoreHoursInactive)
+                        @Html.TextBoxFor(m => m.IgnoreHoursInactive, new { @class = "form-control", autofocus = "autofocus", placeholder = "48", @type = "" })
+                        @Html.ValidationMessageFor(m => m.IgnoreHoursInactive)
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.TerminalAlertConfigs.LowCach1)
-                        @Html.TextBoxFor(m => m.TerminalAlertConfigs.LowCach1, new { @class = "form-control", autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(m => m.TerminalAlertConfigs.LowCach1)
+                        @Html.LabelFor(m => m.LowCach1)
+                        @Html.TextBoxFor(m => m.LowCach1, new { @class = "form-control", autofocus = "autofocus" })
+                        @Html.ValidationMessageFor(m => m.LowCach1)
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.TerminalAlertConfigs.LowCash2)
-                        @Html.TextBoxFor(m => m.TerminalAlertConfigs.LowCash2, new { @class = "form-control", autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(m => m.TerminalAlertConfigs.LowCash2)
+                        @Html.LabelFor(m => m.LowCash2)
+                        @Html.TextBoxFor(m => m.LowCash2, new { @class = "form-control", autofocus = "autofocus" })
+                        @Html.ValidationMessageFor(m => m.LowCash2)
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.TerminalAlertConfigs.LowCash3)
-                        @Html.TextBoxFor(m => m.TerminalAlertConfigs.LowCash3, new { @class = "form-control", autofocus = "autofocus" })
-                        @Html.ValidationMessageFor(m => m.TerminalAlertConfigs.LowCash3)
+                        @Html.LabelFor(m => m.LowCash3)
+                        @Html.TextBoxFor(m => m.LowCash3, new { @class = "form-control", autofocus = "autofocus" })
+                        @Html.ValidationMessageFor(m => m.LowCash3)
                     </div>
                     <div class="form-group">
                         Ignored Alerts <br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreBillDispenserNeedAttention) Bill dispenser needs attention or out of service<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreCardReaderNeedAttention) Card reader needs attention or out of service<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreCassetteNotes) Cassette notes are out<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreChestDoorOpen) Chest door is open<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreCommNeedAttention) Comm system needs attention or out of service<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreJournalNeedAttention) Journal printer needs attention or out of service<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreJournalPaper) Journal printer paper is low/out<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreJournalRibbon) Journal printer ribbon is low/out<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreReceiptNeedAttention) Receipt printer need attention or out of service<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreReceiptPaper) Receipt printer paper is low/out<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreReceiptRibbon) Receipt printer ribbon is low/out<br />
-                        @Html.CheckBoxFor(m => m.TerminalAlertConfigs.IgnoreTopDoorOpen) Top door is Open<br />
+                        @Html.CheckBoxFor(m => m.IgnoreBillDispenserNeedAttention) Bill dispenser needs attention or out of service<br />
+                        @Html.CheckBoxFor(m => m.IgnoreCardReaderNeedAttention) Card reader needs attention or out of service<br />
+                        @Html.CheckBoxFor(m => m.IgnoreCassetteNotes) Cassette notes are out<br />
+                        @Html.CheckBoxFor(m => m.IgnoreChestDoorOpen) Chest door is open<br />
+                        @Html.CheckBoxFor(m => m.IgnoreCommNeedAttention) Comm system needs attention or out of service<br />
+                        @Html.CheckBoxFor(m => m.IgnoreJournalNeedAttention) Journal printer needs attention or out of service<br />
+                        @Html.CheckBoxFor(m => m.IgnoreJournalPaper) Journal printer paper is low/out<br />
+                        @Html.CheckBoxFor(m => m.IgnoreJournalRibbon) Journal printer ribbon is low/out<br />
+                        @Html.CheckBoxFor(m => m.IgnoreReceiptNeedAttention) Receipt printer need attention or out of service<br />
+                        @Html.CheckBoxFor(m => m.IgnoreReceiptPaper) Receipt printer paper is low/out<br />
+                        @Html.CheckBoxFor(m => m.IgnoreReceiptRibbon) Receipt printer ribbon is low/out<br />
+                        @Html.CheckBoxFor(m => m.IgnoreTopDoorOpen) Top door is Open<br />
                     </div>
 
                     <div class="form-group">
@@ -139,7 +141,7 @@
             </div>
         </div>
     </div>
-    @*========= Modal =========*@
+
     @*EDIT*@
     <div id="myModalWorkingHours" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -154,7 +156,7 @@
             {
                     @Model
                     @Html.AntiForgeryToken()
-                    @Html.HiddenFor(m => m.TerminalId)
+                    @Html.HiddenFor(m => m.Id)
                     @Html.Hidden("WorkingHoursEdit")
                     <input type="hidden" id="WorkingHoursEdit" name="WorkingHoursEdit" value="Norway">
                     @Html.DropDownList("Days", new List<SelectListItem>
@@ -247,7 +249,7 @@
             {
                     @Model
                     @Html.AntiForgeryToken()
-                    @Html.HiddenFor(m => m.TerminalId)
+                    @Html.HiddenFor(m => m.Id)
                     @Html.DropDownList("Days", new List<SelectListItem>
                 {
                     new SelectListItem{ Text="Monday", Value = "1" },
@@ -340,7 +342,7 @@
                 @using (Html.BeginForm("DeleteWorkingHours", "Terminals"))
             {
                     @Html.AntiForgeryToken()
-                    @Html.HiddenFor(m => m.TerminalId)
+                    @Html.HiddenFor(m => m.Id)
                     <input type="hidden" id="WorkingHoursId" name="WorkingHoursId" value="">
 
                     <div class="form-group">
