--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -122,7 +122,57 @@
 
         //end
         ChartBar();
-        Createdatatable();
+        $('#grid').append("<tfoot align='right'><tr><th colspan = 3 style='text-align: right;'>  </th><th > </th><th ></th><th ></th></tr></tfoot>");
+
+        $("#grid").DataTable({
+            "scrollX": true,
+            "footerCallback": function (row, data, start, end, display) {
+                var api = this.api(), data;
+
+                // converting to interger to find total
+                var intVal = function (i) {
+                    return typeof i === 'string' ?
+                        i.replace(/[\$,]/g, '') * 1 :
+                        typeof i === 'number' ?
+                            i : 0;
+                };
+
+                // computing column Total of the complete result 
+
+                var monTotal1 = api
+                    .column(3)
+                    .data()
+                    .reduce(function (a, b) {
+
+                        return intVal(a) + intVal(b);
+                    }, 0);
+                var monTotal2 = api
+                    .column(4)
+                    .data()
+                    .reduce(function (a, b) {
+
+                        return intVal(a) + intVal(b);
+                    }, 0);
+                var monTotal3 = api
+                    .column(5)
+                    .data()
+                    .reduce(function (a, b) {
+
+                        return intVal(a) + intVal(b);
+                    }, 0);
+
+                // Update footer by showing the total with the reference of the column index 
+                $(api.column(0).footer()).html('Totals:');
+
+                $(api.column(3).footer()).html("$" + monTotal1);
+                $(api.column(4).footer()).html("$" + monTotal2);
+                $(api.column(5).footer()).html("$" + monTotal3);
+
+            }
+        });
+        $("#grid tr").find('td:eq(3), td:eq(4), td:eq(5)').each(function (index, val) {
+            $(this).html("$" + $(this).html());
+        });
 
 
 
