--- a/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
@@ -153,8 +153,14 @@
             $("#StartDate").datepicker({
                 dateFormat: "mm/dd/yy"
             });
-
-            Createdatatable();
+          
+            $("#grid").DataTable({
+                "scrollX": true
+          
+            });
+            $("#grid tr").find('td:eq(12)').each(function (index, val) {
+                $(this).html("$" + $(this).html());
+            });
            
 
 
