--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
@@ -114,7 +114,8 @@
         var urlautoaccount;
     $(function () {
 
-
+       
+        $('#grid').append("<tfoot align='right'><tr><th colspan = 2 style='text-align: right;'>  </th><th > </th><th colspan = 7></th></tr></tfoot>");
 
         $("#EndDate").datepicker({
             dateFormat: "mm/dd/yy"
@@ -125,8 +126,42 @@
 
         //end
         ChartBarStatus();
-        Createdatatable();
+        //Create datatble
+   
+         $("#grid").DataTable({
+             "scrollX": true,
+             "footerCallback": function (row, data, start, end, display) {
+                 var api = this.api(), data;
+               
+                 // converting to interger to find total
+                 var intVal = function (i) {
+                     return typeof i === 'string' ?
+                         i.replace(/[\$,]/g, '') * 1 :
+                         typeof i === 'number' ?
+                             i : 0;
+                 };
 
+                 // computing column Total of the complete result 
+                 var monTotal = api
+                     .column(2)
+                     .data()
+                     .reduce(function (a, b) {
+                        
+                         return intVal(a) + intVal(b);
+                     }, 0);               
+
+
+                 // Update footer by showing the total with the reference of the column index 
+                 $(api.column(0).footer()).html('Total Cash Balance:');
+                 $(api.column(2).footer()).html("$" + monTotal);
+               
+                
+             }
+        });
+         $("#grid tr").find('td:eq(2)').each(function (index, val) {
+             $(this).html("$" + $(this).html());
+         });
+       
 
 
         });
