--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -51,7 +51,7 @@
                     <h3 class="texth3" data-toggle="collapse" data-target="#getCassettes">
                         <i class="fa fa-money" style="font-size:25px;color:#4776a1"></i><a data-toggle="collapse" href="#getCassettes">Cassettes</a>
                     </h3>
-                    @Html.Partial("Sections/Cassettes", Model)
+                    @Html.Partial("Sections/Cassettes", Model.Cassettes, new ViewDataDictionary() { { "terminalId", Model.Id } })
                 </div>
             </div>
         </div>
@@ -161,45 +161,49 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div id="AddInterchange" class="modal fade" role="dialog">
-        <div class="loader"></div>
-    </div>
-    <div id="AddSurcharge" class="modal fade" role="dialog">
-        <div class="loader"></div>
-    </div>
-    <div id="AddVaultCash" class="modal fade" role="dialog">
-        <div class="loader"></div>
-    </div>
-    <div id="AddContact" class="modal fade" role="dialog">
-        <div class="loader"></div>
-    </div>
-    
+<div id="AddInterchange" class="modal fade" role="dialog">
+    <div class="loader"></div>
+</div>
 
-    @section Scripts {
+<div id="AddSurcharge" class="modal fade" role="dialog">
+    <div class="loader"></div>
+</div>
 
-        @*@Scripts.Render("~/Scripts/jquery-1.10.2.js")*@
-        @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+<div id="AddVaultCash" class="modal fade" role="dialog">
+    <div class="loader"></div>
+</div>
+
+<div id="AddContact" class="modal fade" role="dialog">
+    <div class="loader"></div>
+</div>
 
 
-        <script>
-            $(function () {
-                $("#deleteInterchange").click(function () {
-                    var id = $(this).data('id');
-                    $("#confirmdeleteInterchange #id").val(id);
+@section Scripts {
 
-                });
-                /*var jQuery_1_10_2 = $.noConflict(true);
+    @*@Scripts.Render("~/Scripts/jquery-1.10.2.js")*@
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
 
-                jQuery_1_10_2(function () {
-                    $("#interchanges").DataTable();
-                });*/
+
+    <script>
+        $(function () {
+            $("#deleteInterchange").click(function () {
+                var id = $(this).data('id');
+                $("#confirmdeleteInterchange #id").val(id);
+
             });
+            /*var jQuery_1_10_2 = $.noConflict(true);
+
+            jQuery_1_10_2(function () {
+                $("#interchanges").DataTable();
+            });*/
+        });
 
 
 
-        </script>
+    </script>
 
 
 
-    }
+}
