--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
@@ -8,7 +8,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <h3 class="panel-title">Filter Report Cash Load</h3>
+        <h3 class="panel-title">Filter Report Terminal Status</h3>
     </div>
     <div class="panel-body">
 
@@ -88,7 +88,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
 
-        <h3 class="panel-title">List Cash Load</h3>
+        <h3 class="panel-title">List Terminal Status</h3>
     </div>
     <div class="panel-body">
         @Html.Partial("_PartialTableMorris")
