fix  permissions in user add

--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -72,7 +72,10 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div id="PartnerDetailButtons" class="panel-heading">
-                    <h3 class="texth3"><i class="fa fa-male" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Users", "Users", "Partners", new { partnerId = Model.Id }, new AjaxOptions { UpdateTargetId = "getUsers", LoadingElementId = "loading6", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getUsers" })</h3>
+                    <h3 class="texth3"><i class="fa fa-male" style="font-size:25px;color:#4776a1"></i>
+                    @Ajax.ActionLink("Users", "Users", "Partners", new { partnerId = Model.Id }, 
+                   new AjaxOptions { UpdateTargetId = "getUsers", LoadingElementId = "loading6", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" },
+                   htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getUsers" })</h3>
 
                     <div id="getUsers" class="panel-collapse collapse">
                         <div class="loader"></div>
