--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -71,44 +71,44 @@
             @Html.CheckBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
             @Html.ValidationMessageFor(m => m.IsLocked)
         </div>
-   
+
         <table class="table table-striped table-hover ">
             <thead>
-            <tr>
-                <th>SetOf</th>
-                <th>All</th>
-                <th>Create</th>
-                <th>View</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
+                <tr>
+                    <th>SetOf</th>
+                    <th>All</th>
+                    <th>Create</th>
+                    <th>View</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                </tr>
             </thead>
             <tbody>
-            @foreach (var item in Model.SetOfPermissions)
-            {
-                <tr>
-                    <td>@Html.Label(item.Name)</td>
-                    <td><input type="checkbox" name="Permissions1" value=" " /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id"  /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
-                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
-
-                    @*<td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Name,true)</td>
-                    <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "View").Name)</td>
-                    <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Edit").Name)</td>
-                    <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "Delete").Name)</td>*@
-                </tr>
-            }
-
+                @foreach (var item in Model.SetOfPermissions)
+                {
+                    <tr id="@item.Name">
+                        <td>@Html.Label(item.Name)</td>
+                        <td><input type="checkbox" id="allSetOfPermissions" name="allSetOfPermissions" value="@item.Id" /></td>
+                        @{
+                            foreach (var permission in item.Permissions)
+                            {
+                                <td>
+                                    <input type="checkbox" id="@permission.Id" name="permissions1" value="@permission.Id" />
+                                </td>
+                            }
+                        }
+                    </tr>
+                  }
+            </tbody>
         </table>
+
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
                 <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
                 <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </div>
-    }
+                            }
 </div>
 
 @section Scripts {
