--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -87,7 +87,7 @@
 {
     <div class="panel panel-primary" style="padding:0px;">
         <div class="panel-heading">
-
+            <a name="ancla2"></a>
             <h3 class="panel-title">Chart Cash Load</h3>
         </div>
         <div class="panel-body">
@@ -120,7 +120,7 @@ else
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
         @Scripts.Render("~/Scripts/autocomplete.js")
-        <script>
+    <script>
 
         var urlautopartner = '@Url.Action("AutoPartner", "ReportsSmart")';
         var urlstate = '@Url.Action("AutoState", "ReportGroup")';
@@ -129,39 +129,47 @@ else
         var urlautoterminal = '@Url.Action("AutoTerminal", "ReportsSmart")';
         var urlautogroup = '@Url.Action("AutoGroup", "ReportsSmart")';
         var urlautoaccount = "";
+
     $(function () {
 
-
-        callankle();
         $("#EndDate").datepicker({
             dateFormat: "mm/dd/yy"
         });
         $("#StartDate").datepicker({
             dateFormat: "mm/dd/yy"
         });
-            ChartBar();
+        callankle();
+        var tempdataval = '@TempData["List"]';
+        if (tempdataval != null && tempdataval != '') {
+            callankle2();
+            ChartBar();        
+
+            var sum1 = 0, sum2 = 0, sum3 = 0;
+            $("#grid tbody tr").find('td:eq(3)').each(function (index, val) {
+
+                sum1 += $(this).html() * 1;
+            });
+            $("#grid tbody tr").find('td:eq(4)').each(function (index, val) {
+
+                sum2 += $(this).html() * 1;
+            });
+            $("#grid tbody tr").find('td:eq(5)').each(function (index, val) {
+
+                sum3 += $(this).html() * 1;
+            });
+            $('#grid tbody').append("<tr align='right'><th colspan = 3 style='text-align: right;'> Totals: </th><th >$" + sum1 + " </th><th >$" + sum2 + "</th><th >$" + sum3 + "</th></tr>");
+
+            $("#grid tr").find('td:eq(3), td:eq(4), td:eq(5)').each(function (index, val) {
+                $(this).html("$" + $(this).html());
+            });
        
-        var sum1 = 0,sum2 = 0,sum3 = 0;
-        $("#grid tbody tr").find('td:eq(3)').each(function (index, val) {
+           
+        } 
 
-            sum1 += $(this).html() * 1;
-        });
-        $("#grid tbody tr").find('td:eq(4)').each(function (index, val) {
+    });
+     
 
-            sum2 += $(this).html() * 1;
-        });
-        $("#grid tbody tr").find('td:eq(5)').each(function (index, val) {
-
-            sum3 += $(this).html() * 1;
-        });
-        $('#grid tbody').append("<tr align='right'><th colspan = 3 style='text-align: right;'> Totals: </th><th >$" + sum1 + " </th><th >$" + sum2 + "</th><th >$" + sum3 +"</th></tr>");
-
-        $("#grid tr").find('td:eq(3), td:eq(4), td:eq(5)').each(function (index, val) {
-            $(this).html("$" + $(this).html());
-        });
-        });
-
-        </script>
+    </script>
 
 
     }
