--- a/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
@@ -7,6 +7,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
+        <a name="ancla"></a>
         <h3 class="panel-title">Filter Report Cash Management</h3>
     </div>
     <div class="panel-body">
@@ -69,30 +70,38 @@
 
     </div>
 </div>
-<div class="panel panel-primary" style="padding:0px;">
-    <div class="panel-heading">
-
-        <h3 class="panel-title">Chart Cash Management</h3>
-    </div>
-    <div class="panel-body">
-        @Html.Partial("_PartialMorrisChart")
-    </div>
-</div>
-<div class="panel panel-primary">
-    <div class="panel-heading">
-
-        <h3 class="panel-title">List Cash Management</h3>
-    </div>
-    <div class="panel-body">
-        @Html.Partial("_PartialTable")
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-
+@if (TempData["List"] != null)
+{
+    <div class="panel panel-primary" style="padding:0px;">
+        <div class="panel-heading">
+            <a name="ancla2"></a>
+            <h3 class="panel-title">Chart Cash Management</h3>
+        </div>
+        <div class="panel-body">
+            @Html.Partial("_PartialMorrisChart")
         </div>
     </div>
-</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
 
+            <h3 class="panel-title">List Cash Management</h3>
+        </div>
+        <div class="panel-body">
+            @Html.Partial("_PartialTable")
+
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+
+            </div>
+        </div>
+    </div>
+}
+else
+{
+    <div class="alert alert-warning" style="width:50%;position:relative;margin:0 auto;">
+        <strong>Warning!</strong> Not Record Available.
+    </div>
+}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/Scripts/autocomplete.js")
@@ -104,35 +113,38 @@
         var urlzipcode = '@Url.Action("AutoZipCode", "ReportGroup")';
         var urlautoterminal = '@Url.Action("AutoTerminal", "ReportsSmart")';
         var urlautogroup = '@Url.Action("AutoGroup", "ReportsSmart")';
-
+        var urlautoaccount ;
     $(function () {
-       
-      
-            ChartBar();
-          
-            var sum1 = 0, sum2 = 0, sum3 = 0, sum4 = 0;
-            $("#grid tbody tr").find('td:eq(2)').each(function (index, val) {
 
-                sum1 += $(this).html() * 1;
-            });
-            $("#grid tbody tr").find('td:eq(5)').each(function (index, val) {
+        callankle();
+          var tempdataval = '@TempData["List"]';
+          if (tempdataval != null && tempdataval != '') {
+              callankle2();
+              ChartBar();
 
-                sum2 += $(this).html() * 1;
-            });
-            $("#grid tbody tr").find('td:eq(6)').each(function (index, val) {
+              var sum1 = 0, sum2 = 0, sum3 = 0, sum4 = 0;
+              $("#grid tbody tr").find('td:eq(2)').each(function (index, val) {
 
-                sum3 += $(this).html() * 1;
-            });
-            $("#grid tbody tr").find('td:eq(7)').each(function (index, val) {
+                  sum1 += $(this).html() * 1;
+              });
+              $("#grid tbody tr").find('td:eq(5)').each(function (index, val) {
 
-                sum4 += $(this).html() * 1;
-            });
-            $('#grid').append("<tr align='right'><th colspan = 2 style='text-align: right;'> Totals: </th><th > $" + sum1 + "</th><th ></th><th ></th><th >$" + sum2 + "</th><th >$" + sum3 + "</th><th >$" + sum4 + "</th></tr>");
+                  sum2 += $(this).html() * 1;
+              });
+              $("#grid tbody tr").find('td:eq(6)').each(function (index, val) {
 
-            $("#grid tr").find('td:eq(2), td:eq(5), td:eq(6), td:eq(7)').each(function (index, val) {
-                $(this).html("$" + $(this).html());
-            });
+                  sum3 += $(this).html() * 1;
+              });
+              $("#grid tbody tr").find('td:eq(7)').each(function (index, val) {
 
+                  sum4 += $(this).html() * 1;
+              });
+              $('#grid').append("<tr align='right'><th colspan = 2 style='text-align: right;'> Totals: </th><th > $" + sum1 + "</th><th ></th><th ></th><th >$" + sum2 + "</th><th >$" + sum3 + "</th><th >$" + sum4 + "</th></tr>");
+
+              $("#grid tr").find('td:eq(2), td:eq(5), td:eq(6), td:eq(7)').each(function (index, val) {
+                  $(this).html("$" + $(this).html());
+              });
+          }
         });
 
     </script>
