--- a/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary.cshtml
@@ -7,6 +7,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
+        <a name="ancla"></a>
         <h3 class="panel-title">Filter Daily Transaction Summary</h3>
     </div>
     <div class="panel-body">
@@ -45,7 +46,7 @@
                                 @Html.ValidationMessageFor(model => model.Group, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                    
+
                     </div>
                     <div class="col-xs-12 col-sm-4 col-md-4">
                         <div class="form-group">
@@ -76,22 +77,30 @@
 
     </div>
 </div>
-<div class="panel panel-primary">
-    <div class="panel-heading">
+@if (TempData["List"] != null)
+{
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <a name="ancla2"></a>
+            <h3 class="panel-title">Report Daily Transaction Summary</h3>
+        </div>
+        <div class="panel-body">
 
-        <h3 class="panel-title">Report Daily Transaction Summary</h3>
-    </div>
-    <div class="panel-body">
-      
-        @Html.Partial("_PartialTableDailyTransaction")
+            @Html.Partial("_PartialTableDailyTransaction")
 
-        <div>
-            @Html.ActionLink("Back to List", "Index")
+            <div>
+                @Html.ActionLink("Back to List", "Index")
 
+            </div>
         </div>
     </div>
-</div>
-
+}
+else
+{
+    <div class="alert alert-warning" style="width:50%;position:relative;margin:0 auto;">
+        <strong>Warning!</strong> Not Record Available.
+    </div>
+}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/Scripts/autocomplete.js")
@@ -114,15 +123,11 @@
         $("#StartDate").datepicker({
             dateFormat: "mm/dd/yy"
         });
-
-        //end
-      
-      
-      
-       
-
-
-
+          callankle();
+          var tempdataval = '@TempData["List"]';
+          if (tempdataval != null && tempdataval != '') {
+              callankle2();
+          }
         });
 
     </script>
