--- a/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
@@ -7,6 +7,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
+        <a name="ancla"></a>
         <h3 class="panel-title">Filter Report Cash Load</h3>
     </div>
     <div class="panel-body">
@@ -42,7 +43,7 @@
                                 @Html.ValidationMessageFor(model => model.Partner, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                       
+
                         <div class="form-group">
                             @Html.Label("Account: ", new { @class = "col-sm-2 control-label" })
                             <div class="col-sm-10">
@@ -52,7 +53,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-md-4">
-                        
+
                         <div class="form-group">
                             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
@@ -117,21 +118,29 @@
 
     </div>
 </div>
+@if (TempData["List"] != null)
+{
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <a name="ancla2"></a>
+            <h3 class="panel-title">Terminal List</h3>
+        </div>
+        <div class="panel-body">
+            @Html.Partial("_PartialTable")
 
-<div class="panel panel-primary">
-    <div class="panel-heading">
+            <div>
+                @Html.ActionLink("Back to List", "Index")
 
-        <h3 class="panel-title">Terminal List</h3>
-    </div>
-    <div class="panel-body">
-        @Html.Partial("_PartialTable")
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-
+            </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <div class="alert alert-warning" style="width:50%;position:relative;margin:0 auto;">
+        <strong>Warning!</strong> Not Record Available.
+    </div>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
@@ -146,20 +155,23 @@
         var urlautogroup = '@Url.Action("AutoGroup", "ReportsSmart")';
         var urlautoaccount = '@Url.Action("AutoAccount", "BankAccount")';
         $(function () {
-           
-           
+
+
             $("#EndDate").datepicker({
                 dateFormat: "mm/dd/yy"
             });
             $("#StartDate").datepicker({
                 dateFormat: "mm/dd/yy"
             });
-          
-          
-            $("#grid tr").find('td:eq(12)').each(function (index, val) {
-                $(this).html("$" + $(this).html());
-            });
-           
+
+         callankle();
+          var tempdataval = '@TempData["List"]';
+          if (tempdataval != null && tempdataval != '') {
+              callankle2();
+              $("#grid tr").find('td:eq(12)').each(function (index, val) {
+                  $(this).html("$" + $(this).html());
+              });
+          }
 
 
 
