--- a/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
@@ -87,7 +87,11 @@
             <h3 class="panel-title">List Cash Management</h3>
         </div>
         <div class="panel-body">
-            @Html.Partial("_PartialTable")
+            <div style="display:none" id="idhead">
+                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Cash Management" } })
+
+            </div>
+            @Html.Partial("_PartialTable", null, new ViewDataDictionary { { "orientation", "Landscape" } })
 
             <div>
                 @Html.ActionLink("Back to List", "Index")
@@ -139,7 +143,7 @@ else
 
                   sum4 += $(this).html() * 1;
               });
-              $('#grid').append("<tr align='right'><th colspan = 2 style='text-align: right;'> Totals: </th><th > $" + sum1 + "</th><th ></th><th ></th><th >$" + sum2 + "</th><th >$" + sum3 + "</th><th >$" + sum4 + "</th></tr>");
+              $('#grid').append("<tr align='right'><th></th><th >  </th><th > $" + sum1 + "</th><th ></th><th ></th><th >$" + sum2 + "</th><th >$" + sum3 + "</th><th >$" + sum4 + "</th></tr>");
 
               $("#grid tr").find('td:eq(2), td:eq(5), td:eq(6), td:eq(7)').each(function (index, val) {
                   $(this).html("$" + $(this).html());
