--- a/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary.cshtml
@@ -37,17 +37,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Group, new { htmlAttributes = new { @class = "form-control", @id = "group", @placeholder = "< All >" } })
-                                @Html.HiddenFor(model => model.GroupId, new { id = "groupid" })
-                                @Html.ValidationMessageFor(model => model.Group, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
 
-                    </div>
                     <div class="col-xs-12 col-sm-4 col-md-4">
                         <div class="form-group">
                             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -63,14 +53,35 @@
                                 @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
                             </div>
                         </div>
+                      
+                    </div>
+
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Group, new { htmlAttributes = new { @class = "form-control", @id = "group", @placeholder = "< All >" } })
+                                @Html.HiddenFor(model => model.GroupId, new { id = "groupid" })
+                                @Html.ValidationMessageFor(model => model.Group, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Surcharge)
+                            @Html.CheckBoxFor(model => model.Surcharge, true)
+
+                            @Html.LabelFor(model => model.Dispensed)
+                            @Html.CheckBoxFor(model => model.Dispensed, true)
+                            @Html.ValidationMessageFor(model => model.Dispensed, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(model => model.Surcharge, "", new { @class = "text-danger" })
+
+                        </div>
+                      
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10" style="text-align: right;">
                                 <input type="submit" value="Filter" class="btn btn-primary" />
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         }
@@ -85,8 +96,13 @@
             <h3 class="panel-title">Report Daily Transaction Summary</h3>
         </div>
         <div class="panel-body">
+            <div style="display:none" id="idhead">
+                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Daily Transaction Summary" } , { "from",  @TempData["from"] },{ "to" , @TempData["to"] } })
 
-            @Html.Partial("_PartialTableDailyTransaction")
+            </div>
+            @Html.Partial("_PartialTableDailyTransaction", null, new ViewDataDictionary { { "orientation", "Landscape" }})
+
+          
 
             <div>
                 @Html.ActionLink("Back to List", "Index")
