--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
@@ -103,7 +103,12 @@
             <h3 class="panel-title">List Terminal Status</h3>
         </div>
         <div class="panel-body">
-            @Html.Partial("_PartialTable")
+            <div style="display:none" id="idhead">
+                @Html.Partial("_PartialHead", null, new ViewDataDictionary { { "Title", "Cash Management" } })
+
+            </div>
+            @Html.Partial("_PartialTable", null, new ViewDataDictionary { { "orientation", "Landscape" } })
+
 
             <div>
                 @Html.ActionLink("Back to List", "Index")
@@ -153,7 +158,7 @@ else
                   sum1 += $(this).html() * 1;
               });
 
-              $('#grid').append("<tr align='right'><th colspan = 2 style='text-align: right;'> Total Cash Balance: </th><th >$" + sum1 + " </th><th colspan = 7></th></tr>");
+              $('#grid').append("<tr align='right'><th></th><th > </th><th >$" + sum1 + " </th><th colspan = 7></th></tr>");
 
               $("#grid tr").find('td:eq(2)').each(function (index, val) {
                   $(this).html("$" + $(this).html());
