--- a/OctagonPlatform/Views/ReportsSmart/_PartialTable.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialTable.cshtml
@@ -4,7 +4,7 @@
 @using System.Data;
 
 @{
-    WebGrid grid = null ;
+    WebGrid grid = null;
     if (TempData["List"] != null)
     {
         DataTable dt = (DataTable)TempData["List"];
@@ -20,44 +20,46 @@
         }
         grid = new WebGrid(model, canSort: false);
     }
- }  
+}
+@{
+    string orientation = this.ViewData.ContainsKey("orientation") ? this.ViewData["orientation"].ToString() : "Portrait";
+   
+}
+@if (TempData["List"] != null)
+{
+    <!-- Single button -->
 
-    @if (TempData["List"] != null)
-    {
-  <!-- Single button -->
+    <div class="row">
+        <div class="col-sm-9"></div>
+        <div class="col-sm-3" style="text-align: right;">
+            <div class="btn-group" role="group" aria-label="...">
+                <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
+                <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"]+".xls")'  ,'','grid','@orientation');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"]+".doc")'  ,'idhead','grid','@orientation');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
-        <div class="row">
-            <div class="col-sm-9"></div>
-            <div class="col-sm-3" style="text-align: right;">
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
-                    <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"]+".xls")' , 'TableExport' ,'idhead','grid');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
-                    <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"]+".doc")' , 'TableExport' ,'idhead','grid');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
-
-                </div>
-                <p></p>
             </div>
+            <p></p>
         </div>
-        <div id="TableExport" class="row" style="overflow-y: scroll; height:600px;">
-            @grid.GetHtml(
-          tableStyle: "table table-striped",
-          htmlAttributes: new { id = "grid", width = "100%" }
-           )           
-        </div>
-        <div id="myfirstchart" style="height: 100%;width:100%"></div>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <div style="display:none" id="idhead">
-            @Html.Partial("_PartialExcelHead")
-        </div>
-    }
-    @using (Html.BeginForm("Export", "ReportsSmart", FormMethod.Post))
-    {
-        <input type="hidden" name="html" />
-        <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
-        <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
+    </div>
+    <div id="TableExport" class="row" style="overflow-y: scroll; height:600px;">
+        @grid.GetHtml(
+           tableStyle: "table table-striped",
+           htmlAttributes: new { id = "grid", width = "100%" }
+            )
+    </div>
+    <div id="myfirstchart" style="height: 100%;width:100%"></div>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
 
-    }
+}
+@using (Html.BeginForm("Export", "ReportsSmart", FormMethod.Post))
+{
+    <input type="hidden" name="html" />
+    <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
+    <input type = "hidden" name = "orientation" value = "@orientation" />
+   <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
 
-    
+}
+
+
 
