--- a/OctagonPlatform/Views/ReportsSmart/_PartialTableDailyTransaction.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialTableDailyTransaction.cshtml
@@ -2,8 +2,14 @@
 @using System.Dynamic
 @using System.Reflection;
 @using System.Data;
+@using OctagonPlatform.Models.FormsViewModels;
 
+@{
+    string orientation = this.ViewData.ContainsKey("orientation") ? this.ViewData["orientation"].ToString() : "Portrait";
+    bool surcharge = ((TransDailyViewModel)TempData["model"]).Surcharge;
+    bool dispensed = ((TransDailyViewModel)TempData["model"]).Dispensed;
 
+}
 @if (TempData["List"] != null)
 {
     <!-- Single button -->
@@ -13,16 +19,16 @@
         <div class="col-sm-3" style="text-align: right;">
             <div class="btn-group" role="group" aria-label="...">
                 <button type="button" class="btn btn-danger" onclick="$('#pdf').click();" style="border-radius: 0px;"><i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i> PDF</button>
-                <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"]+".xls")', 'TableExport','idhead','grid');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
-                <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"]+".doc")', 'TableExport','idhead','grid');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
+                <button type="button" class="btn btn-success" onclick="Export('@(TempData["filename"]+".xls")'  ,'','grid','@orientation');" style="border-radius: 0px;"><i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i> XLS</button>
+                <button type="button" class="btn btn-primary" onclick="Export('@(TempData["filename"]+".doc")'  ,'idhead','grid','@orientation');" style="border-radius: 0px;"><i class="fa fa-file-word-o fa-2x" aria-hidden="true"></i> DOC</button>
 
             </div>
             <p></p>
         </div>
     </div>
-    <div id="TableExport" class="row" style="overflow-y: scroll; height:800px;">
-        <h3> @TempData["from"] - @TempData["to"]</h3>
-        <table class="table" id="grid" width="100">
+    <div id="TableExport" class="row" style="overflow-y: scroll; height:600px;">
+
+        <table class="table" id="grid" width="100%">
             <thead class="thead-blue">
                 <tr>
                     <th>Terminal ID</th>
@@ -34,88 +40,163 @@
                     <th>Declined</th>
                     <th>Reversed</th>
                     <th>Total Transactions</th>
+                    @{ if (surcharge)
+                        {
+                            <th>Surcharge</th>
+                        }
+                        if (dispensed)
+                        {
+                            <th>Dispensed</th>
+                        }
+                    }
 
                 </tr>
             </thead>
 
             <tbody>
                 @{
-                var terminalId = "";
-                int i = 0;
-                int? sum1 = 0;
-                int? sum2 = 0;
-                int? sum3 = 0;
-                int? sum4 = 0;
-                int? sum5 = 0;
-                int? sum6 = 0;
-                List<OctagonPlatform.Views.ReportsSmart.ViewModels.TransDailyTableVM> list = (List<OctagonPlatform.Views.ReportsSmart.ViewModels.TransDailyTableVM>)TempData["List"];
-                OctagonPlatform.Views.ReportsSmart.ViewModels.TransDailyTableVM item;
+                    var terminalId = "";
+                    int i = 0;
+                    int? sum1 = 0;
+                    int? sum2 = 0;
+                    int? sum3 = 0;
+                    int? sum4 = 0;
+                    int? sum5 = 0;
+                    int? sum6 = 0;
+                    double? sum7 = 0;
+                    double? sum8 = 0;
+                    List<OctagonPlatform.Views.ReportsSmart.ViewModels.TransDailyTableVM> list = (List<OctagonPlatform.Views.ReportsSmart.ViewModels.TransDailyTableVM>)TempData["List"];
+                    OctagonPlatform.Views.ReportsSmart.ViewModels.TransDailyTableVM item;
                 }
                 @for (i = 0; i < list.Count(); i++)
-            {
-                item = list[i];
-                terminalId = terminalId != item.TerminalId ? item.TerminalId : "";
-                if (terminalId != "")
                 {
-                    if (i > 0)
+                    item = list[i];
+                    terminalId = terminalId != item.TerminalId ? item.TerminalId : "";
+                    if (terminalId != "")
                     {
-                        <tr style="background-color: rgba(0,0,0,0.05);">
-                            <td colspan="3"><b>Totals</b></td>
-                            <td>@sum1</td>
-                            <td>@sum2</td>
-                            <td>@sum3</td>
-                            <td>@sum4</td>
-                            <td>@sum5</td>
-                            <td>@sum6</td>
-                            @{
+                        if (i > 0)
+                        {
+                            <tr style="background-color: rgba(0,0,0,0.05);">
+                                <td colspan="3"><b>Totals</b></td>
+                                <td>@sum1</td>
+                                <td>@sum2</td>
+                                <td>@sum3</td>
+                                <td>@sum4</td>
+                                <td>@sum5</td>
+                                <td>@sum6</td>
+                                @{
+                                    if (surcharge)
+                                    {
+                                        <td>@sum7</td>
+                                    }
+                                    if (dispensed)
+                                    {
+                                        <td>@sum8</td>
+                                    }
+                                }
+                            </tr>
+                        }
+                       
                             sum1 = item.ApprovedWithdrawals;
                             sum2 = item.SurchargableWithdrawals;
                             sum3 = item.OtherApproved;
                             sum4 = item.Declined;
                             sum5 = item.Reversed;
                             sum6 = item.TotalTransaction;
+
+                            if (surcharge)
+                            {
+                                sum7 = item.Surcharge;
+                            }
+                            if (dispensed)
+                            {
+                                sum8 = item.Dispensed;
+                            }                        
+                        <tr style="background-color: rgba(0,0,0,0.05);">
+                            <td><b>@item.TerminalId</b></td>
+                            <td><b>@item.LocationName</b></td>
+                            <td><b>@item.SurchargeAmount</b></td>
+                            @{
+                                if (surcharge && dispensed)
+                                {
+                                    <td colspan="8"></td>
+                                }
+                                else
+                                {
+                                    if (surcharge || dispensed)
+                                    {
+                                        <td colspan="7"></td>
+                                    }
+                                    else
+                                    {
+                                        <td colspan="6"></td>
+                                    }
+                                }
+
                             }
 
                         </tr>
-                }
+                        <tr>
+                            <td colspan="3">@item.Date</td>
+                            <td>@item.ApprovedWithdrawals</td>
+                            <td>@item.SurchargableWithdrawals</td>
+                            <td>@item.OtherApproved</td>
+                            <td>@item.Declined</td>
+                            <td>@item.Reversed</td>
+                            <td>@item.TotalTransaction</td>
+                            @{
+                                if (surcharge)
+                                {
+                                    <td>@item.Surcharge</td>
+                                }
+                                if (dispensed)
+                                {
+                                    <td>@item.Dispensed</td>
+                                }
+                            }
 
-                <tr style="background-color: rgba(0,0,0,0.05);">
-                    <td><b>@item.TerminalId</b></td>
-                    <td><b>@item.LocationName</b></td>
-                    <td><b>@item.SurchargeAmount</b></td>
-                    <td colspan="6"></td>
-                </tr>
-                <tr>
-                    <td colspan="3">@item.Date</td>
-                    <td>@item.ApprovedWithdrawals</td>
-                    <td>@item.SurchargableWithdrawals</td>
-                    <td>@item.OtherApproved</td>
-                    <td>@item.Declined</td>
-                    <td>@item.Reversed</td>
-                    <td>@item.TotalTransaction</td>
-                </tr>
-        }
-        else
-        {
-            <tr>
-                <td colspan="3">@item.Date</td>
-                <td>@item.ApprovedWithdrawals</td>
-                <td>@item.SurchargableWithdrawals</td>
-                <td>@item.OtherApproved</td>
-                <td>@item.Declined</td>
-                <td>@item.Reversed</td>
-                <td>@item.TotalTransaction</td>
-                @{
-                sum1 += item.ApprovedWithdrawals;
-                sum2 += item.SurchargableWithdrawals;
-                sum3 += item.OtherApproved;
-                sum4 += item.Declined;
-                sum5 += item.Reversed;
-                sum6 += item.TotalTransaction;
+                        </tr>
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="3">@item.Date</td>
+                            <td>@item.ApprovedWithdrawals</td>
+                            <td>@item.SurchargableWithdrawals</td>
+                            <td>@item.OtherApproved</td>
+                            <td>@item.Declined</td>
+                            <td>@item.Reversed</td>
+                            <td>@item.TotalTransaction</td>
+                            @{
+                                if (surcharge)
+                                {
+                                    <td>@item.Surcharge</td>
+                                }
+                                if (dispensed)
+                                {
+                                    <td>@item.Dispensed</td>
+                                }
+                            }
+
+                            @{
+                                sum1 += item.ApprovedWithdrawals;
+                                sum2 += item.SurchargableWithdrawals;
+                                sum3 += item.OtherApproved;
+                                sum4 += item.Declined;
+                                sum5 += item.Reversed;
+                                sum6 += item.TotalTransaction;
+                                if (surcharge)
+                                {
+                                    sum7 += item.Surcharge;
+                                }
+                                if (dispensed)
+                                {
+                                    sum8 += item.Dispensed;
+                                }
+                            }
+                        </tr>
+                    }
                 }
-            </tr>
-    }
-}
 
                 <tr style="background-color: rgba(0,0,0,0.05);">
                     <td colspan="3"><b>Totals</b></td>
@@ -125,6 +206,17 @@
                     <td>@sum4</td>
                     <td>@sum5</td>
                     <td>@sum6</td>
+                    @{
+                        if (surcharge)
+                        {
+                            <td>@sum7</td>
+                        }
+                        if (dispensed)
+                        {
+                            <td>@sum8</td>
+                        }
+                    }
+
                 </tr>
             </tbody>
 
@@ -133,18 +225,17 @@
 
 
     </div>
-        <div id="myfirstchart" style="height: 100%;width:100%"></div>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <div style="display:none" id="idhead">
-            @Html.Partial("_PartialExcelHead")
-        </div>
-    }
+    <div id="myfirstchart" style="height: 100%;width:100%"></div>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
+}
+
 @using (Html.BeginForm("Export", "ReportsSmart", FormMethod.Post))
 {
-   
     <input type="hidden" name="html" />
     <input type="hidden" name="filename" value="@(TempData["filename"]+".pdf")" />
+    <input type="hidden" name="orientation" value="@orientation" />
     <input type="submit" id="pdf" onclick="ExportPdf('idhead','grid');" value="" style="display:none" />
 
 }
