ready report dailytransaction

--- a/OctagonPlatform/Views/ReportsSmart/_PartialTableDailyTransaction.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialTableDailyTransaction.cshtml
@@ -87,11 +87,11 @@
                                 @{
                                     if (surcharge)
                                     {
-                                        <td>@sum7</td>
+                                        <td>@("$"+sum7)</td>
                                     }
                                     if (dispensed)
                                     {
-                                        <td>@sum8</td>
+                                        <td>@("$"+sum8)</td>
                                     }
                                 }
                             </tr>
@@ -147,11 +147,11 @@
                             @{
                                 if (surcharge)
                                 {
-                                    <td>@item.Surcharge</td>
+                                    <td>@("$"+item.Surcharge)</td>
                                 }
                                 if (dispensed)
                                 {
-                                    <td>@item.Dispensed</td>
+                                    <td>@("$"+item.Dispensed)</td>
                                 }
                             }
 
@@ -170,11 +170,11 @@
                             @{
                                 if (surcharge)
                                 {
-                                    <td>@item.Surcharge</td>
+                                    <td>@("$"+item.Surcharge)</td>
                                 }
                                 if (dispensed)
                                 {
-                                    <td>@item.Dispensed</td>
+                                    <td>@("$"+item.Dispensed)</td>
                                 }
                             }
 
@@ -209,11 +209,11 @@
                     @{
                         if (surcharge)
                         {
-                            <td>@sum7</td>
+                            <td>@("$"+sum7)</td>
                         }
                         if (dispensed)
                         {
-                            <td>@sum8</td>
+                            <td>@("$"+sum8)</td>
                         }
                     }
 
