cambie ancla por ankle

--- a/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary.cshtml
@@ -7,7 +7,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <a name="ancla"></a>
+        <a name="ankle"></a>
         <h3 class="panel-title">Filter Daily Transaction Summary</h3>
     </div>
     <div class="panel-body">
@@ -92,7 +92,7 @@
 {
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <a name="ancla2"></a>
+            <a name="ankle2"></a>
             <h3 class="panel-title">Report Daily Transaction Summary</h3>
         </div>
         <div class="panel-body">
