--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus.cshtml
@@ -8,7 +8,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <a name="ancla"></a>
+        <a name="ankle"></a>
         <h3 class="panel-title">Filter Report Terminal Status</h3>
     </div>
     <div class="panel-body">
@@ -90,7 +90,7 @@
 {
     <div class="panel panel-primary" style="padding:0px;">
         <div class="panel-heading">
-            <a name="ancla2"></a>
+            <a name="ankle2"></a>
             <h3 class="panel-title">Chart Terminal Status</h3>
         </div>
         <div class="panel-body">
