--- a/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement.cshtml
@@ -7,7 +7,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <a name="ancla"></a>
+        <a name="ankle"></a>
         <h3 class="panel-title">Filter Report Cash Management</h3>
     </div>
     <div class="panel-body">
@@ -74,7 +74,7 @@
 {
     <div class="panel panel-primary" style="padding:0px;">
         <div class="panel-heading">
-            <a name="ancla2"></a>
+            <a name="ankle2"></a>
             <h3 class="panel-title">Chart Cash Management</h3>
         </div>
         <div class="panel-body">
