--- a/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalList.cshtml
@@ -7,7 +7,7 @@
 <p></p>
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <a name="ancla"></a>
+        <a name="ankle"></a>
         <h3 class="panel-title">Filter Report Cash Load</h3>
     </div>
     <div class="panel-body">
@@ -122,7 +122,7 @@
 {
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <a name="ancla2"></a>
+            <a name="ankle2"></a>
             <h3 class="panel-title">Terminal List</h3>
         </div>
         <div class="panel-body">
